--- a/config/nvim/syntax_highlight.toml
+++ b/config/nvim/syntax_highlight.toml
@@ -1,6 +1,12 @@
 [[plugins]]
 repo = 'w0rp/ale'
-hook_add = ''' let g:ale_statusline_format = ['⨉ %d', '⚠ %d', '⬥ ok'] '''
+hook_add = '''
+let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
+let g:ale_sign_error = '>>'
+let g:ale_sign_warning = '--'
+nmap <silent> <C-k> <Plug>(ale_previous_wrap)
+nmap <silent> <C-j> <Plug>(ale_next_wrap)
+'''
 
 [[plugins]]
 repo = 'KeitaNakamura/highlighter.nvim'
