--- a/config/nvim/fuzzy_finder.toml
+++ b/config/nvim/fuzzy_finder.toml
@@ -3,6 +3,8 @@ repo = 'Shougo/denite.nvim'
 if = "has('nvim')"
 if = "has('python3')"
 hook_add = '''
+nnoremap <silent> / :<C-u>Denite line<CR>
+nnoremap <silent> <Leader>f :<C-u>Denite file<CR>
 nnoremap <silent> <Leader>o :<C-u>Denite file_rec<CR>
 nnoremap <silent> <Leader>b :<C-u>Denite buffer<CR>
 nnoremap <silent> <Leader>dg :<C-u>Denite grep -buffer-name=search-buffer-denite<CR>
@@ -11,16 +13,24 @@ nnoremap <silent> <Leader>dn :<C-u>Denite -resume -buffer-name=search-buffer-den
 nnoremap <silent> <Leader>dp :<C-u>Denite -resume -buffer-name=search-buffer-denite -select=-1 -immediately<CR>
 '''
 hook_post_source = '''
+call denite#custom#option('default', 'statusline', v:false)
+
+call denite#custom#map('_', "-", '<denite:do_action:split>')
+call denite#custom#map('_', "|", '<denite:do_action:vsplit>')
+call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
+call denite#custom#map('normal', 'jj', '<denite:quit>')
+
+call denite#custom#option('grep', 'matcher', ['matcher_cpsm'])
+call denite#custom#option('grep', 'sorter', ['sorter_sublime'])
 call denite#custom#var('grep', 'command', ['ag'])
 call denite#custom#var('grep', 'default_opts', ['-i', '--vimgrep'])
 call denite#custom#var('grep', 'recursive_opts', [])
 call denite#custom#var('grep', 'pattern_opt', [])
 call denite#custom#var('grep', 'separator', ['--'])
 call denite#custom#var('grep', 'final_opts', [])
-call denite#custom#map('_', "-", '<denite:do_action:split>')
-call denite#custom#map('_', "|", '<denite:do_action:vsplit>')
-call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
-call denite#custom#option('default', 'statusline', v:false)
+
+call denite#custom#option('line', 'matcher', ['matcher_cpsm'])
+call denite#custom#option('line', 'sorter', ['sorter_sublime'])
 '''
 
 [[plugins]]
@@ -29,7 +39,8 @@ repo = 'Shougo/neoyank.vim'
 [[plugins]]
 repo = 'Shougo/neomru.vim'
 
-### Input support
 [[plugins]]
-repo = 'cohama/lexima.vim'
-on_i = 1
+repo = 'nixprime/cpsm'
+if = "has('nvim')"
+if = "has('python3')"
+build = 'env PY3=ON ./install.sh'
