--- a/config/nvim/search.toml
+++ b/config/nvim/search.toml
@@ -1,14 +1,10 @@
 [[plugins]]
-repo = 'haya14busa/incsearch.vim'
-hook_source = '''
-  map /  <Plug>(incsearch-forward)
-  map ?  <Plug>(incsearch-backward)
-  map g/ <Plug>(incsearch-stay)
-'''
-
-[[plugins]]
 repo = 'terryma/vim-expand-region'
 hook_source = '''
   vmap v <Plug>(expand_region_expand)
   vmap <C-v> <Plug>(expand_region_shrink)
 '''
+
+[[plugins]]
+repo = 'cohama/lexima.vim'
+on_i = 1
