--- a/config/nvim/plugins/search.toml
+++ b/config/nvim/plugins/search.toml
@@ -8,3 +8,11 @@ hook_source = '''
 [[plugins]]
 repo = 'cohama/lexima.vim'
 on_i = 1
+
+[[plugins]]
+repo = 'haya14busa/incsearch.vim'
+hook_source = '''
+  map /  <Plug>(incsearch-forward)
+  map ?  <Plug>(incsearch-backward)
+  map g/ <Plug>(incsearch-stay)
+'''
