--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -50,7 +50,9 @@ set -g @shell_mode 'vi'
 setw -g mouse
 
 ##### Default shell #####
-set -g default-shell /usr/local/bin/fish
+if-shell "uname | grep -q Darwin" "set -g default-shell /usr/local/bin/fish" ""
+if-shell "uname | grep -q Linux" "set -g default-shell /usr/bin/fish" ""
+
 
 ##### Run tpm #####
 run-shell '$XDG_DATA_HOME/tpm/tpm'
