--- a/config/nvim/plugins/syntax_highlight.toml
+++ b/config/nvim/plugins/syntax_highlight.toml
@@ -1,6 +1,8 @@
 [[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
+  let g:ale_echo_msg_error_str = 'E'
+  let g:ale_echo_msg_warning_str = 'W'
   let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
   let g:ale_sign_error = '>>'
   let g:ale_sign_warning = '--'
