--- a/config/nvim/plugins/visual.toml
+++ b/config/nvim/plugins/visual.toml
@@ -40,13 +40,13 @@ hook_add = '''
         \   ]
         \ },
         \ 'component_function': {
-        \ 'readonly': 'LightLineReadOnly',
-        \ 'fugitive': 'LightLineFugitive',
-        \ 'filename': 'LightLineFileName',
+        \   'readonly': 'LightLineReadOnly',
+        \   'fugitive': 'LightLineFugitive',
+        \   'filename': 'LightLineFileName',
         \   'mode': 'LightLineMode',
         \   'linter': 'LightLineLinterStatus',
         \   'denite_source': 'LightLineDeniteSource'
-        \   }
+        \  }
         \ }
 
   function! LightLineReadOnly()
@@ -78,15 +78,16 @@ hook_add = '''
   endfunction
 
   function! LightLineLinterStatus()
-    if ! exists(':ale')
+    try
+      let l:counts = ale#statusline#Count(bufnr(''))
+
+      let l:all_errors = l:counts.error + l:counts.style_error
+      let l:all_non_errors = l:counts.total - l:all_errors
+
+      return l:counts.total == 0 ? '' : printf('⨉ %d, ⚠ %d', all_non_errors, all_errors)
+    catch
       return ''
-    endif
-    let l:counts = ale#statusline#Count(bufnr(''))
-
-    let l:all_errors = l:counts.error + l:counts.style_error
-    let l:all_non_errors = l:counts.total - l:all_errors
-
-    return l:counts.total == 0 ? '' : printf('⨉ %d, ⚠ %d', all_non_errors, all_errors)
+    endtry
   endfunction
 
   function! LightLineDeniteSource()
