--- a/config/nvim/plugins/syntax_highlight.toml
+++ b/config/nvim/plugins/syntax_highlight.toml
@@ -6,6 +6,10 @@ hook_add = '''
   let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
   let g:ale_sign_error = '>>'
   let g:ale_sign_warning = '--'
+  let g:ale_set_loclist = 0
+  let g:ale_set_quickfix = 0
+  let g:ale_open_list = 0
+  let g:ale_keep_list_window_open = 0
   nmap <silent> <C-k> <Plug>(ale_previous_wrap)
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
 '''
