--- a/config/nvim/plugins/fuzzy_finder.toml
+++ b/config/nvim/plugins/fuzzy_finder.toml
@@ -14,24 +14,25 @@ hook_add = '''
   nnoremap <silent> <Leader>dp :<C-u>Denite -resume -buffer-name=search-buffer-denite -select=-1 -immediately<CR>
 '''
 hook_post_source = '''
-call denite#custom#option('default', 'statusline', v:false)
+  call denite#custom#option('default', 'statusline', v:false)
 
-call denite#custom#map('_', "-", '<denite:do_action:split>')
-call denite#custom#map('_', "|", '<denite:do_action:vsplit>')
-call denite#custom#map('insert', '<C-h>', '<denite:move_caret_to_left>')
-call denite#custom#map('insert', '<C-l>', '<denite:move_caret_to_right>')
-call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
-call denite#custom#map('normal', '<C-j>', '<denite:quit>')
+  call denite#custom#map('_', "-", '<denite:do_action:split>')
+  call denite#custom#map('_', "|", '<denite:do_action:vsplit>')
+  call denite#custom#map('insert', '<C-h>', '<denite:move_caret_to_left>')
+  call denite#custom#map('insert', '<C-l>', '<denite:move_caret_to_right>')
+  call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
+  call denite#custom#map('normal', '<C-j>', '<denite:quit>')
+  call denite#custom#map('insert', '<C-j>', '<denite:quit>')
 
-call denite#custom#option('grep', 'sorter', ['sorter_sublime'])
-call denite#custom#var('grep', 'command', ['ag'])
-call denite#custom#var('grep', 'default_opts', ['-i', '--vimgrep'])
-call denite#custom#var('grep', 'recursive_opts', [])
-call denite#custom#var('grep', 'pattern_opt', [])
-call denite#custom#var('grep', 'separator', ['--'])
-call denite#custom#var('grep', 'final_opts', [])
+  call denite#custom#option('grep', 'sorter', ['sorter_sublime'])
+  call denite#custom#var('grep', 'command', ['ag'])
+  call denite#custom#var('grep', 'default_opts', ['-i', '--vimgrep'])
+  call denite#custom#var('grep', 'recursive_opts', [])
+  call denite#custom#var('grep', 'pattern_opt', [])
+  call denite#custom#var('grep', 'separator', ['--'])
+  call denite#custom#var('grep', 'final_opts', [])
 
-call denite#custom#option('line', 'sorter', ['sorter_sublime'])
+  call denite#custom#option('line', 'sorter', ['sorter_sublime'])
 '''
 
 [[plugins]]
