--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -g @tpm_plugins '                  \
 set-environment -g TMUX_PLUGIN_MANAGER_PATH ${XDG_DATA_HOME}/tmux/plugins
 set-option -g @prefix_highlight_show_copy_mode 'on'
 set-option -g @colors-solarized 'dark'
+set-option -g @git_user_separator ' # '
 
 ##### TrueColor #####
 set -ga terminal-overrides ",xterm-256color:Tc"
@@ -37,7 +38,7 @@ set -g status-right-length 120
 set -g status-justify centre
 setw -g window-status-format " #I: #W "
 setw -g window-status-current-format "#I: #W"
-set -g status-left '#H:#S #{git_user} #{prefix_highlight}'
+set -g status-left '#{git_user} #{prefix_highlight}'
 set -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac} | #{wifi_strength_mac} ] #{volume_mac} [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
 setw -g window-status-format '#P: #(shell command)'
 setw -g monitor-activity on
