--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -24,31 +24,31 @@ set-option -g @colors-solarized 'dark'
 set-option -g @git_user_separator ' # '
 
 ##### TrueColor #####
-set -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 ##### Prefix #####
-set -g prefix C-Space
-bind C-Space send-prefix
-bind R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
-unbind C-b
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
+bind-key R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+unbind-key C-b
 
 ##### StatusLine #####
-set -g status-left-length 120
-set -g status-right-length 120
-set -g status-justify centre
-setw -g window-status-format " #I: #W "
-setw -g window-status-current-format "#I: #W"
-set -g status-left '#{git_user} #{prefix_highlight}'
-set -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac} | #{wifi_strength_mac} ] #{volume_mac} [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
-setw -g window-status-format '#P: #(shell command)'
-setw -g monitor-activity on
-set -g visual-activity on
+set-option -g status-position top
+set-option -g status-left-length 120
+set-option -g status-right-length 120
+set-option -g status-left '#{git_user} #{prefix_highlight}'
+set-option -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac} | #{wifi_strength_mac} ] #{volume_mac} [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
+set-option -g monitor-activity on
+set-option -g visual-activity on
+set-option -g visual-bell on
+set-window-option -g window-status-format '#I: #W'
+set-window-option -g window-status-current-format '#I: #W'
 
 ##### Copy and Paste #####
-set -g @shell_mode 'vi'
+set-option -g @shell_mode 'vi'
 
 ##### Enable Mouse #####
-setw -g mouse
+set-window-option -g mouse
 
 ##### Default shell #####
 if-shell "uname | grep -q Darwin" "set -g default-shell /usr/local/bin/fish" ""
