--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -41,6 +41,7 @@ set-option -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac} | #{wifi_streng
 set-option -g monitor-activity on
 set-option -g visual-activity on
 set-option -g visual-bell on
+set-option -g status-justify 'centre'
 set-window-option -g window-status-format '#I: #W'
 set-window-option -g window-status-current-format '#I: #W'
 
