--- a/config/nvim/plugins/fuzzy_finder.toml
+++ b/config/nvim/plugins/fuzzy_finder.toml
@@ -6,7 +6,7 @@ on_cmd = 'Denite'
 hook_add = '''
   nnoremap <silent> <Leader>l :<C-u>Denite line<CR>
   nnoremap <silent> <Leader>f :<C-u>Denite file<CR>
-  nnoremap <silent> <Leader>o :<C-u>Denite file_rec<CR>
+  nnoremap <silent> <Leader>r :<C-u>Denite file_rec<CR>
   nnoremap <silent> <Leader>b :<C-u>Denite buffer<CR>
   nnoremap <silent> <Leader>dg :<C-u>Denite grep -buffer-name=search-buffer-denite<CR>
   nnoremap <silent> <Leader>dr :<C-u>Denite -resume -buffer-name=search-buffer-denite<CR>
