--- a/config/nvim/plugins/fuzzy_finder.toml
+++ b/config/nvim/plugins/fuzzy_finder.toml
@@ -24,7 +24,6 @@ hook_post_source = '''
   call denite#custom#map('normal', '<C-j>', '<denite:quit>')
   call denite#custom#map('insert', '<C-j>', '<denite:quit>')
 
-  call denite#custom#option('grep', 'sorter', ['sorter_sublime'])
   call denite#custom#var('grep', 'command', ['ag'])
   call denite#custom#var('grep', 'default_opts', ['-i', '--vimgrep'])
   call denite#custom#var('grep', 'recursive_opts', [])
@@ -32,7 +31,12 @@ hook_post_source = '''
   call denite#custom#var('grep', 'separator', ['--'])
   call denite#custom#var('grep', 'final_opts', [])
 
-  call denite#custom#option('line', 'sorter', ['sorter_sublime'])
+  call denite#custom#source('grep', 'sorters', ['sorter_sublime'])
+  call denite#custom#source('line', 'sorters', ['sorter_sublime'])
+  call denite#custom#source('file', 'sorters', ['sorter_sublime'])
+  call denite#custom#source('file_rec', 'sorters', ['sorter_sublime'])
+
+  call denite#custom#source('file', 'matchers', ['matcher_fuzzy'])
 '''
 
 [[plugins]]
