--- a/config/nvim/plugins/syntax_highlight.toml
+++ b/config/nvim/plugins/syntax_highlight.toml
@@ -1,6 +1,7 @@
 [[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
+  let g:ale_sign_column_always = 1
   let g:ale_echo_msg_error_str = 'E'
   let g:ale_echo_msg_warning_str = 'W'
   let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
@@ -12,6 +13,8 @@ hook_add = '''
   let g:ale_keep_list_window_open = 0
   nmap <silent> <C-k> <Plug>(ale_previous_wrap)
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
+  let g:ale_lint_on_text_changed = 'never'
+  let g:ale_lint_on_enter = 0
 '''
 
 [[plugins]]
