--- a/config/nvim/plugins/syntax_highlight.toml
+++ b/config/nvim/plugins/syntax_highlight.toml
@@ -1,6 +1,7 @@
 [[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
+  let g:ale_max_signs = -1
   let g:ale_sign_column_always = 1
   let g:ale_echo_msg_error_str = 'E'
   let g:ale_echo_msg_warning_str = 'W'
