--- a/config/nvim/plugins/visual.toml
+++ b/config/nvim/plugins/visual.toml
@@ -14,70 +14,96 @@ hook_add = '''
 repo = 'itchyny/lightline.vim'
 hook_add = '''
   let g:lightline = {
-        \ 'colorscheme': 'solarized',
-        \ 'active': {
-        \   'left': [
-        \     ['mode', 'paste'],
-        \     ['readonly', 'filename', 'fugitive', 'denite_source'],
-        \     ['linter']
-        \   ],
-        \   'right': [
-        \     ['lineinfo'],
-        \     ['filetype']
-        \   ]
-        \ },
-        \ 'component_function': {
-        \   'readonly': 'LightLineReadOnly',
-        \   'fugitive': 'LightLineFugitive',
-        \   'filename': 'LightLineFileName',
-        \   'mode': 'LightLineMode',
-        \   'linter': 'LightLineLinterStatus',
-        \   'denite_source': 'LightLineDeniteSource'
-        \  }
-        \ }
-
-  function! LightLineReadOnly()
-    return &ft !~? 'help' && &readonly ? 'RO' : ''
-  endfunction
+    \ 'colorscheme': 'solarized',
+    \ 'active': {
+    \   'left': [
+    \     ['mode', 'paste'],
+    \     ['filename', 'denite_source']
+    \   ],
+    \   'right': [
+    \     ['lineinfo'],
+    \     [],
+    \     ['filetype_emoji', 'ale_error', 'ale_warning', 'ale_ok'],
+    \   ]
+    \ },
+    \ 'component_function': {
+    \   'filename': 'LightLineFileName',
+    \   'mode': 'LightLineMode',
+    \   'linter': 'LightLineLinterStatus',
+    \   'denite_source': 'LightLineDeniteSource',
+    \   'filetype_emoji': 'LightLineFileTypeEmoji'
+    \  },
+    \ 'component_expand': {
+    \   'ale_error': 'LightLineAleError',
+    \   'ale_warning': 'LightLineAleWarning',
+    \   'ale_ok': 'LightLineAleOk'
+    \ },
+    \ }
 
   function! LightLineFileName()
     if &ft == 'denite'
       return ''
     endif
-    return '' != expand('%:t')   ? expand('%:t') : '[No Name]'
-  endfunction
-
-  function! LightLineFugitive()
-    if ! exists(':fugitive')
-      return ''
-    endif
-    return '' != fugitive#head() ? fugitive#head() : ''
+    return '' != expand('%:t') ? expand('%:t') : '[No Name]'
   endfunction
 
   function! LightLineMode()
     if &ft == 'denite'
-      let mode_str = substitute(denite#get_status_mode(), "-\\| ", "", "g")
-      call lightline#link(tolower(mode_str[0]))
-      return mode_str
+      let l:mode_str = substitute(denite#get_status_mode(), "-\\| ", "", "g")
+      call lightline#link(tolower(l:mode_str[0]))
+      return l:mode_str
     endif
 
     return winwidth(0) > 60 ? lightline#mode() : ''
   endfunction
 
-  function! LightLineLinterStatus()
-    try
-      let l:counts = ale#statusline#Count(bufnr(''))
-
-      let l:all_errors = l:counts.error + l:counts.style_error
-      let l:all_non_errors = l:counts.total - l:all_errors
-
-      return l:counts.total == 0 ? '' : printf('⨉ %d, ⚠ %d', all_non_errors, all_errors)
-    catch
-      return ''
-    endtry
-  endfunction
-
   function! LightLineDeniteSource()
     return &ft == 'denite' ? denite#get_status_sources() : ''
+  endfunction
+
+  function! LightLineFileTypeEmoji()
+    let l:types = {
+      \ 'go': ' Go',
+      \ 'ruby': ' Ruby',
+      \ 'python': ' Python',
+      \ 'java': ' Java',
+      \ 'scala': ' Scala',
+      \ 'php': ' PHP',
+      \ 'html': ' HTML',
+      \ 'javascript': ' JavaScript',
+    \ }
+    return &ft == '' ? 'no ft' : get(l:types, &ft, &ft)
+  endfunction
+
+  function! LightLineAleError() abort
+    return s:ale_string(0)
+  endfunction
+
+  function! LightLineAleWarning() abort
+    return s:ale_string(1)
+  endfunction
+
+  function! LightLineAleOk() abort
+    return s:ale_string(2)
+  endfunction
+
+  function! s:ale_string(mode)
+    if !exists('g:ale_buffer_info')
+      return ''
+    endif
+
+    let l:buffer = bufnr('%')
+    let l:counts = ale#statusline#Count(l:buffer)
+    let [l:error_format, l:warning_format, l:no_errors] = g:ale_statusline_format
+
+    if a:mode == 0 " Error
+      let l:errors = l:counts.error + l:counts.style_error
+      return l:errors ? printf(l:error_format, l:errors) : ''
+    elseif a:mode == 1 " Warning
+      let l:warnings = l:counts.warning + l:counts.style_warning
+      return l:warnings ? printf(l:warning_format, l:warnings) : ''
+    endif
+
+    return l:counts.total == 0? l:no_errors: ''
   endfunction
 '''
