--- a/config/nvim/plugins/syntax_highlight.toml
+++ b/config/nvim/plugins/syntax_highlight.toml
@@ -3,8 +3,8 @@ repo = 'w0rp/ale'
 hook_add = '''
   let g:ale_max_signs = -1
   let g:ale_sign_column_always = 1
-  let g:ale_echo_msg_error_str = 'E'
-  let g:ale_echo_msg_warning_str = 'W'
+  let g:ale_echo_msg_error_str = ''
+  let g:ale_echo_msg_warning_str = ''
   let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
   let g:ale_sign_error = '>>'
   let g:ale_sign_warning = '--'
@@ -16,6 +16,7 @@ hook_add = '''
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
   let g:ale_lint_on_text_changed = 'never'
   let g:ale_lint_on_enter = 0
+  let g:ale_statusline_format = [': %s', ': %s', '']
 '''
 
 [[plugins]]
