--- a/config/nvim/plugins/syntax_highlight.toml
+++ b/config/nvim/plugins/syntax_highlight.toml
@@ -2,12 +2,12 @@
 repo = 'w0rp/ale'
 hook_add = '''
   let g:ale_max_signs = -1
-  let g:ale_sign_column_always = 1
+  let g:ale_sign_column_always = 0
   let g:ale_echo_msg_error_str = ''
   let g:ale_echo_msg_warning_str = ''
-  let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
-  let g:ale_sign_error = '>>'
-  let g:ale_sign_warning = '--'
+  let g:ale_echo_msg_format = '[%linter%] %s'
+  let g:ale_sign_error = ''
+  let g:ale_sign_warning = ''
   let g:ale_set_loclist = 0
   let g:ale_set_quickfix = 0
   let g:ale_open_list = 0
@@ -16,7 +16,7 @@ hook_add = '''
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
   let g:ale_lint_on_text_changed = 'never'
   let g:ale_lint_on_enter = 0
-  let g:ale_statusline_format = [': %s', ': %s', '']
+  let g:ale_statusline_format = [ " : %s"," : %s", " "]
 '''
 
 [[plugins]]
