--- a/config/nvim/plugins/language.toml
+++ b/config/nvim/plugins/language.toml
@@ -37,3 +37,11 @@ on_ft = 'go'
 [[plugins]]
 repo = 'kballard/vim-swift'
 on_ft = 'swift'
+
+[[plugins]]
+repo = 'hashivim/vim-terraform'
+on_ft = 'terraform'
+hook_source = '''
+  let g:terraform_align=1
+  let g:terraform_fmt_on_save = 1
+'''
