--- a/config/vim/plugins/languages.toml
+++ b/config/vim/plugins/languages.toml
@@ -37,7 +37,7 @@ hook_add = '''
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
   let g:ale_lint_on_text_changed = 'never'
   let g:ale_lint_on_enter = 0
-  let g:ale_statusline_format = [ " : %s"," : %s", ""]
+  let g:ale_statusline_format = [ "> %s","> %s", ""]
 '''
 
 [[plugins]]
