--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -37,7 +37,7 @@ set-option -g status-position top
 set-option -g status-left-length 120
 set-option -g status-right-length 120
 set-option -g status-left '#{git_user} #{prefix_highlight}'
-set-option -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac} | #{wifi_strength_mac} ] #{volume_mac} [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
+set-option -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac}] [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
 set-option -g monitor-activity on
 set-option -g visual-activity on
 set-option -g visual-bell on
