--- a/config/vim/plugins/languages.toml
+++ b/config/vim/plugins/languages.toml
@@ -24,6 +24,24 @@ hook_source = '''
 '''
 
 [[plugins]]
+repo = 'Shougo/neosnippet'
+on_i  = 1
+on_ft = 'snippet'
+depends = ['neosnippet-snippets']'
+hook_source = '''
+  imap <C-k> <Plug>(neosnippet_expand_or_jump)
+  smap <C-k> <Plug>(neosnippet_expand_or_jump)
+  xmap <C-k> <Plug>(neosnippet_expand_target)
+  if has('conceal')
+    set conceallevel=2 concealcursor=niv
+  endif
+'''
+
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
+on_i = 1
+
+[[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
   let g:ale_max_signs = -1
