--- a/config/vim/plugins/languages.toml
+++ b/config/vim/plugins/languages.toml
@@ -88,7 +88,7 @@ hook_add = '''
 [[plugins]]
 repo = 'autozimu/LanguageClient-neovim'
 rev = 'master'
-hook_source = '''
+hook_add = '''
 set hidden
 let g:LanguageClient_serverCommands = {
   \ 'javascript': ['javascript-typescript-stdio'],
