--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,10 +27,9 @@ set-option -g @git_user_separator ' # '
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 ##### Prefix #####
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
-bind-key R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 unbind-key C-b
+set-option -g prefix C-q
+bind-key -T prefix R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 ##### StatusLine #####
 set-option -g status-position top
