--- a/config/vim/plugins/completion.toml
+++ b/config/vim/plugins/completion.toml
@@ -43,7 +43,7 @@ on_i = 1
 ## Language Server Protocol
 [[plugins]]
 repo = 'autozimu/LanguageClient-neovim'
-build = 'make release'
+build = 'bash install.sh'
 hook_add = '''
   set hidden
   let g:LanguageClient_serverCommands = {
