--- a/config/vim/plugins/language_supports.toml
+++ b/config/vim/plugins/language_supports.toml
@@ -16,8 +16,9 @@ hook_add = '''
   let g:ale_keep_list_window_open = 0
   nmap <silent> <C-k> <Plug>(ale_previous_wrap)
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
-  let g:ale_lint_on_text_changed = 'always'
+  let g:ale_lint_on_text_changed = 'never'
   let g:ale_lint_on_enter = 0
+  let g:ale_fix_on_save = 1
   let g:ale_statusline_format = ["E > %s","W > %s", "OK"]
 '''
 
