--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -173,8 +173,11 @@ visual_bell:
 key_bindings:
   - { key: V,        mods: Command, action: Paste                        }
   - { key: C,        mods: Command, action: Copy                         }
-  - { key: Q,        mods: Command, action: Quit                         }
+#  - { key: Q,        mods: Command, action: Quit                         }
 #  - { key: W,        mods: Command, action: Quit                         }
+  - { key: Key0,     mods: Command, action: ResetFontSize                }
+  - { key: K,        mods: Command, action: IncreaseFontSize             }
+  - { key: J,        mods: Command, action: DecreaseFontSize             }
   - { key: Home,                    chars: "\x1bOH",   mode: AppCursor   }
   - { key: Home,                    chars: "\x1b[1~",  mode: ~AppCursor  }
   - { key: End,                     chars: "\x1bOF",   mode: AppCursor   }
